# document-ai-pii-faking_backend

./: .env.example  .gitattributes  .gitignore  Finetune_Roberta.ipynb  app_gemini.py  config.yaml  main.py  pyproject.toml  requirements.txt  settings.py  utils.py
RoBERTa_PII_AI4Privacy/: config.json  model.safetensors
RoBERTa_PII_Conll2003/: config.json  model.safetensors  tokenizer_config.json
extraction/: llm_extractor.py
final_roberta_pii/: .gitignore  config.json  model.safetensors
ingestion/: pdf_ingestor.py  pdf_ingestor_old.py
ingestor/: base.py  pdf_ingestor.py
masker/db/: repository.py  schema.py
masking/: faker_engine.py  recognizer.py
masking/db/: connection.py  repository.py  schema.py
pipeline/: graph.py  nodes.py  state.py
tests/: conftest.py  test.db  test_db.py  test_ingestor_base.py  test_state.py
