[project]
name = "idp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "black>=26.5.1",
    "docling>=2.101.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
