[project]
name = "idp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "black>=26.5.1",
    "docling>=2.101.0",
    "faker>=40.23.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "numpy>=2.4.6",
    "ocrmypdf>=17.6.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "uvicorn[standard]>=0.49.0",
]
